fixed manage account header spacing and imported transfer funds stylesheet

--- a/style/stylesheets/manage-account.less
+++ b/style/stylesheets/manage-account.less
@@ -8,18 +8,18 @@
 }
 #manage-account .header .button{
     .i;
-    margin-top:19px;
     vertical-align:top;
     margin-left:20px;
+    padding-top:12px;
+    margin-left:0px;
 }
 #manage-account .header .text{
     .i;
-    padding:16px;
-    padding-left:8px;
 }
 #manage-account .header .account-name{
     .i;
     color:@g600;
+    margin-left:10px;
 }
 
 #manage-account .sumdisplay{
